# finance-assistant

./: .env.example  .gitignore  Dockerfile  README.md  app.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/agents/: __init__.py  base_agent.py  finance_qa_agent.py  goal_planning_agent.py  market_agent.py  news_agent.py  planner_agent.py  portfolio_agent.py  tax_agent.py
src/core/: __init__.py  config.py  llm.py  prompts.py  state.py
src/data/: __init__.py  cache.py  market_data.py
src/data/knowledge_base/: README.md
src/data/knowledge_base/financial_planning/: emergency_fund.md
src/data/knowledge_base/investing_basics/: compound_interest.md  stocks_beginners_guide.md
src/data/knowledge_base/portfolio_management/: diversification.md
src/data/knowledge_base/tax_education/: capital_gains.md  retirement_accounts.md
src/rag/: __init__.py  embeddings.py  indexer.py  retriever.py  vector_store.py
src/utils/: __init__.py  exceptions.py  logger.py  validators.py
src/web_app/: __init__.py  app.py
src/web_app/components/: __init__.py  charts.py  sidebar.py
src/web_app/pages/: __init__.py  chat.py  market.py  portfolio.py
src/workflow/: __init__.py  graph.py  nodes.py  router.py
tests/: __init__.py  conftest.py
tests/integration/: test_end_to_end.py  test_market_data.py
tests/unit/: test_agents.py  test_rag.py  test_workflow.py
