[build-system]
requires = ["setuptools>=72.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-finance-assistant"
version = "0.1.0"
description = "Production-grade multi-agent AI finance assistant using LangGraph with RAG and APIs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "AI Finance Team"},
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html -v"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "SIM", "TCH"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
